styles/app.scss
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap');
@import 'bootstrap-custom';
@import '_spacings';
html,
body {
  padding: 0;
  margin: 0;
  font-family: 'Poppins', 'Open Sans' !important;
  background-image: url('/background/bg.png');
  color: #fff !important;
}

a {
  text-decoration: none;
  color: #fff !important;
}

* {
  box-sizing: border-box;
}

.first-shapes {
  position: absolute;
  top: 0;
  width: 100%;
  min-height: 70vh;
  background-size: cover;
}

header {
  position: relative;
  z-index: 2;
  text-align: center;
  #navbar {
    padding: 1.5rem 0;
  }

  .nav-link {
    padding-left: 1.5rem !important;
    padding-right: 1.5rem !important;
  }
}

.texts {
  max-width: 630px;
  overflow: hidden;
}

.card-holder {
  border-radius: 50px;
  height: 400px;

  &.bg-card {
    background-color: #0e001c;
  }
}

.rsu {
  position: relative;

  .row {
    .col-md-3:not(:last-child) {
      border-right: 3px solid #b1afff;
    }
  }

  .img-hw {
    position: absolute;
    right: 0;
    bottom: 50%;
    width: 50%;
    min-width: 200px;
  }
  .img-corner {
    top: -40px;
    left: 0;
    position: absolute;
  }
}

.slider {
  height: 530px;

  .picture {
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
    width: 62%;
  }
  .content {
    border-top-right-radius: 20px;
    border-bottom-right-radius: 20px;
    background-color: #fff;
    width: 38%;
  }
}

/// TEXTS ///
.text-purple {
  color: #b2b0ff;
  font-size: 18px;
  font-size: 500;
}
.text-highlight {
  font-size: 66.4px;
  line-height: 60px;
  font-weight: 700;
}

.text-title {
  font-size: 43px;
  font-weight: 700;
}

.card-title {
  font-size: 25px;
  font-weight: bold;
}

.card-p {
  font-size: 15px;
  line-height: 25px;
  font-weight: 500;
  color: #ae9fbb;
}

.rsu-p {
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  color: #ae9fbb;
}

.rsu-title {
  font-size: 26px;
  font-weight: 700;
}
.rsu-highlight {
  font-size: 70.3px;
  line-height: 70.93px;
  font-weight: 700;
}

.content-title {
  font-size: 36px;
  line-height: 40px;
  color: #000;
  font-weight: 700;
  overflow: auto;
}
.content-p {
  font-size: 16px;
  line-height: 24px;
  color: #000;
  font-weight: 400;
  overflow: auto;
}
//////////// SIZING ///////////
.mw-900 {
  max-width: 900px;
}

.mw-80 {
  max-width: 80%;
}

.mt-20 {
  margin-top: 20%;
}
.mt-30 {
  margin-top: 30%;
}
//////////--------------////////////

.cursor-pointer {
  cursor: pointer;
}

.dots {
  width: 100px;
  .dot {
    width: 10px;
    height: 10px;
    border-radius: 50%;
    background-color: #fff;
    cursor: pointer;

    &.active {
      transform: scale(1.5);
      background-color: #b2b0ff;
    }
  }
}

